FE-55: Fix body width not to overflow

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -9,7 +9,6 @@ body {
   padding: 0;
   min-height: 100vh;
   height: 100%;
-  width: 100vw;
   background-color: black;
   color: white;
 }
